# propaganda-pipeline

./: .gitignore  LICENSE  README.md  propaganda_pipeline.py  propaganda_pipeline_tutorial.ipynb  pyproject.toml  requirements.txt
docs/: .buildinfo  .buildinfo.bak  api.html  architecture.html  dependencies.html  genindex.html  index.html  install.html  objects.inv  py-modindex.html  search.html  searchindex.js  techniques.html  tutorial.html  tutorial.ipynb
docs/.doctrees/: api.doctree  architecture.doctree  dependencies.doctree  environment.pickle  index.doctree  install.doctree  techniques.doctree  tutorial.doctree
docs/_modules/: index.html  propaganda_pipeline.html  pydantic.html
docs/_sources/: architecture.rst.txt  index.rst.txt  install.rst.txt  tutorial.rst.txt
docs_src/: api.rst  conf.py  dependencies.rst  index.rst  techniques.rst  translate_docstrings.py  translations_cache.json  tutorial.ipynb
docs_src/_static/: custom.css
docs_src/_templates/sidebar/: mit-badge.html
